Add pattern to gh release command in workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Download ProVerBMate's artifacts
-        run: gh release download --repo Sophietje/ProVerBMate
+        run: gh release download --repo Sophietje/ProVerBMate -p "*.jar" -p ".owl"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
