--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,11 +8,6 @@ jobs:
   enrich:
     runs-on: ubuntu-latest
     steps:
-      - name: Download ProVerBMate's artifacts
-        run: gh release download --repo Sophietje/ProVerBMate -p "*.jar" -p "*.owl"
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
       # Set Java environment
       - name: Set up JDK 11
         uses: actions/setup-java@v3
@@ -22,6 +17,14 @@ jobs:
 
       - name: Checkout Verification-Tool-Overview repository
         uses: actions/checkout@v3
+      
+      - name: Download ProVerBMate's artifacts
+        run: gh release download --repo Sophietje/ProVerBMate -p "*.jar" -p "*.owl"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Setup tmate
+        uses: mxschmitt/action-tmate@v3
 
       # Convert
       - name: Enrichment
