Remove tmate session from workflow & try out creating a PR

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,10 +31,9 @@ jobs:
           chmod 0755 ProVerBMate-1.6.0.jar
           java -jar ProVerBMate-1.6.0.jar --spring.profiles.active=daily --github-token=${{secrets.GIT_API}} --springer-key=${{secrets.SPRINGER_KEY}} --cross-ref.mailto=${{secrets.CROSS_REF}}
           echo Enrichment success.
+
+      - name: Remove downloaded & generated artifacts
+        run: rm -f ProVerBMate-1.6.0.jar ProVerB_1.6.0.owl enriched_ProVerB_1.6.0.owl extracted_ProVerB_1.6.0.owl
       
-      - name: Tmate session
-        uses: mxschmitt/action-tmate@v3
-      #- name: Remove downloaded files
-      #  run: rm -f ProVerBMate-1.6.0.jar ProVerB_1.6.0.owl enriched_ProVerB_1.6.0.owl extracted_ProVerB_1.6.0.owl
-      #- name: Create PR
-      #  uses: peter-evans/create-pull-request@v5
+      - name: Create PR
+        uses: peter-evans/create-pull-request@v5
